ontol-compiler/test-cases/error/union/missing_discriminator.on
def foo (
    rel .'a': 'constant'
)
def bar (
    rel .'b': text
)
def u (
    rel .is?: foo
    rel .is?: bar // ERROR cannot discriminate type
)
